[gd_scene format=3 uid="uid://cjwkylkn271vq"]

[ext_resource type="PackedScene" uid="uid://bl1uy5rjiuk8i" path="res://scenes/bird.tscn" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://c14ltgtmbw5c0" path="res://scripts/main.gd" id="1_sugp2"]
[ext_resource type="PackedScene" uid="uid://cl5i111tsbw42" path="res://scenes/pipes.tscn" id="2_sugp2"]
[ext_resource type="Texture2D" uid="uid://by25qudo4hufj" path="res://assets/football-background.png" id="2_tbgi4"]
[ext_resource type="Script" uid="uid://8itt6h1msuqm" path="res://scenes/background.gd" id="3_tefeu"]
[ext_resource type="LabelSettings" uid="uid://qxvdcn0s0wgc" path="res://resources/label_settings.tres" id="4_jyhfs"]

[node name="main" type="Node2D" unique_id=1142389016]
script = ExtResource("1_sugp2")

[node name="Background" type="TextureRect" parent="." unique_id=133209027]
offset_top = 2.0000002
offset_right = 940.9526
offset_bottom = 639.98785
scale = Vector2(1.0000504, 0.9939563)
texture = ExtResource("2_tbgi4")
expand_mode = 2
stretch_mode = 1
script = ExtResource("3_tefeu")

[node name="bird" parent="." unique_id=232894084 groups=["bird"] instance=ExtResource("1_0wfyh")]
position = Vector2(160, 248)

[node name="pipes" parent="." unique_id=1483097776 instance=ExtResource("2_sugp2")]
position = Vector2(666, -3)

[node name="Timer" type="Timer" parent="." unique_id=364781814]
wait_time = 1.75

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=211019156]

[node name="score_label" type="Label" parent="CanvasLayer" unique_id=1990147765]
offset_right = 241.0
offset_bottom = 88.0
text = "Score: 0"
label_settings = ExtResource("4_jyhfs")

[node name="start_info" type="Label" parent="CanvasLayer" unique_id=2033976746]
offset_top = -1.0
offset_right = 641.0
offset_bottom = 642.0
text = "Press space to start!"
label_settings = ExtResource("4_jyhfs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="." unique_id=1587882063]
anchor_mode = 0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
